--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -11,7 +11,7 @@
   description: is hiring Rust, C and C++ developers
 
 - name: Peaklingo
-  website: 
+  website: #
   apply_link: https://jobvision.ir/jobs/269666/%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85-rust-developer/
   logo: /assets/careers/Peaklingo.png
   description: is hiring Rust developers
