add peaklingo hiring link (#4)
* add peaklingo hiring link

* modify website in careers.yml

--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -9,3 +9,9 @@
   apply_link: https://careers.playpod.ir/career/rust-developer/
   logo: /assets/careers/playpod.png
   description: is hiring Rust, C and C++ developers
+
+- name: Peaklingo
+  website: #
+  apply_link: https://jobvision.ir/jobs/269666/%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85-rust-developer/
+  logo: /assets/careers/Peaklingo.png
+  description: is hiring Rust developers
