--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -2,16 +2,10 @@
   website: https://www.arvancloud.com
   apply_link: https://www.arvancloud.com/jobs
   logo: /assets/careers/arvancloud.png
-  description: is hiring Rust and C developers for the CDN team
+  description: در حال استخدام توسعه‌دهندگان Rust در تیم CDN است.
   
 - name: Playpod
   website: https://playpod.ir/
   apply_link: https://careers.playpod.ir/career/rust-developer/
   logo: /assets/careers/playpod.png
-  description: is hiring Rust, C and C++ developers
-
-- name: Peaklingo
-  website: #
-  apply_link: https://jobvision.ir/jobs/269666/%D8%A7%D8%B3%D8%AA%D8%AE%D8%AF%D8%A7%D9%85-rust-developer/
-  logo: /assets/careers/Peaklingo.png
-  description: is hiring Rust developers
+  description: در حال استخدام توسعه‌دهندگان Rust, C و ++C است.
