fix text and update telegram group id

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author:
   name: Rust Iran Meetup Team
   twitter: Rust_ir
   github: rust-meetup/rust-meetup.ir
-  telegram: Rustland
+  telegram: rust_persian
   email: kaveh@riseup.net
 
 feedback_url: https://github.com/rust-meetup/rust-meetup.ir
